--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "ionic": "driftyco/ionic-bower#1.0.0-beta.14",
     "angular-google-maps": "~2.0.12",
     "lodash": "~2.4.1",
-    "ngCordova": "~0.1.9-alpha"
+    "ngCordova": "~0.1.9-alpha",
+    "angular-cache": "~3.2.4"
   },
   "version": "0.0.0",
   "homepage": "https://github.com/prasannaboz/SplitDeal-Ionic",
